--- a/src/main/resources/templates/frontend/videos.html
+++ b/src/main/resources/templates/frontend/videos.html
@@ -22,7 +22,10 @@
 		            </tr>
 		        </thead>
 			</table>
+<!-- 			分页 -->
+	    	<div th:include="frontend/common::commonPage"></div>
 	    </div>
+	 
 	    <div th:include="frontend/common::commonFooter"></div>
 	</div>
 
