--- a/src/main/resources/templates/frontend/common.html
+++ b/src/main/resources/templates/frontend/common.html
@@ -22,9 +22,13 @@
 			<div class="container-fluid">
 				<ul class="nav navbar-nav">
 					<li class="active"><a href="/getVideoList">影视</a></li>
-					<li><a href="#">导航二</a></li>
+					<li><a href="/vip/">VIP入口</a></li>
 					<li><a href="#">导航三</a></li>
 					<li><a href="#">导航四</a></li>
+<!-- 					<li><a href="#" class="btn btn-warning btn-lg active" role="button" style="margin-top: 10px; fowidth: 50px; height: 30px;font-style: white;">VIP</a></li> -->
+<!-- 					<li style="margin-left: 360px;" ><a href="#"><div ><button type="button" class="btn btn-warning">VIP</button></div></a></li> -->
+					
+<!-- 					<li style="margin-top: 13px;"> -->
 					<li style="margin-top: 8px; margin-left: 470px;">
 						<form class="form-inline" action="/search" method="post">
 							<div class="form-group">
