update parse url

--- a/src/main/resources/templates/frontend/vip/index.html
+++ b/src/main/resources/templates/frontend/vip/index.html
@@ -103,7 +103,7 @@
 		$('.success')["fadeIn"]();
 	}, 3200);
 	var bfqAtkgI1 = window["document"]["getElementById"]("valueurl")["value"];
-	window["document"]["getElementById"]("vipurl")["src"] = "http://api.ledboke.com/?url=" + bfqAtkgI1;
+	window["document"]["getElementById"]("vipurl")["src"] = "http://app.baiyug.cn:2019/vip/?url=" + bfqAtkgI1;
 });
 if (window["document"]["getElementById"]('auth') != undefined) {
         if (window["document"]["getElementById"]('auth')["innerHTML"] != '弹幕') {
