--- a/src/main/resources/templates/frontend/vip/index.html
+++ b/src/main/resources/templates/frontend/vip/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
-	<title>一键解析爱奇艺,优酷,腾讯,乐视,芒果等各大视频网站的VIP视频。</title>	
+	<title>影视</title>	
 	<!--必要样式-->
 	<link rel="stylesheet" type="text/css" href="/static/css/styles.css">
 	<!--[if IE]>
@@ -58,7 +58,7 @@
 	  <img src='/static/images/puff.svg'>
 	  <p>全力加载中....</p>
 	</div>
-	<strong><div class="text" style=" text-align:center;">本站所有接口均来至互联网仅提供本地测试使用，请勿用于任何商业用途，否则后果自负。！</div></strong>
+	<strong><div class="text" style=" text-align:center;">一键解析爱奇艺,优酷,腾讯,乐视,芒果等各大视频网站的VIP视频，本站所有接口均来至互联网仅提供本地测试使用，请勿用于任何商业用途，否则后果自负。！</div></strong>
 	<!--播放认证//-->
 	<script type="text/javascript" src='/static/js/stopExecutionOnTimeout.js?t=1'></script>
 	<script type="text/javascript" src='/static/js/iqyapi.js'></script>
